--- a/RongXiaoTong/src/main/resources/application.yml
+++ b/RongXiaoTong/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/rongxiaotong?serverTimezone=GMT%2B8&useUnicode=true&characterEncodeing=UTF-8&useSSL=false
     username: root
-    password: 12345
+    password: abc123
   jackson:
     time-zone: GMT+8
   redis:
