--- a/RongXiaoTong/src/main/resources/application.yml
+++ b/RongXiaoTong/src/main/resources/application.yml
@@ -1,15 +1,11 @@
 server:
-  port: 9090
+  port: 9091
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/rongxiaotong?serverTimezone=GMT%2B8&useUnicode=true&characterEncodeing=UTF-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/rongxiaotong1?serverTimezone=GMT%2B8&useUnicode=true&characterEncodeing=UTF-8&useSSL=false
     username: root
-<<<<<<< Updated upstream
-    password: abc123
-=======
-    password: 123456
->>>>>>> Stashed changes
+    password: 12345
   jackson:
     time-zone: GMT+8
   redis:
